--- a/environment.conf
+++ b/environment.conf
@@ -1,7 +1,7 @@
 ## See https://docs.puppetlabs.com/puppet/latest/reference/config_file_environment.html
 
 # The module path
-modulepath = forge/:3rdparty/:acme/:$basemodulepath
+modulepath = ./forge/:./3rdparty/:./acme/:$basemodulepath
 
 # Manifest 
 manifest = manifests/site.pp
